--- a/css/styles.css
+++ b/css/styles.css
@@ -62,3 +62,94 @@ h3 {
     font: 2.4rem;
 }
 
+/* Header */
+.header {
+    display: flex;
+    justify-content: center;
+}
+
+.header__logo {
+    margin: 3rem 0; /* Espacio arriba y abajo, a los lados no */
+}
+
+/* Navegacion */
+.navegacion {
+    background-color: var(--primarioOscuro);
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    gap: 2rem; /* Espacio entre elementos */
+}
+
+.navegacion__enlace {
+    font-family: var(--fuentePrincipal);
+    color: var(--blanco);
+    font-size: 3rem;
+}
+
+/*
+.navegacion__enlace:last-of-type {
+    margin-right: 0;
+}
+*/
+
+
+.navegacion__enlace--activo, .navegacion__enlace:hover {
+    color: var(--secundario);
+}
+
+/* Footer */
+.footer {
+    background-color: var(--primarioOscuro);
+    padding: 1rem 0;
+    margin-top: 2rem;
+}
+
+.footer__texto {
+    font-family: var(--fuentePrincipal);
+    font-size: 2.2rem;
+    text-align: center;
+}
+
+/* Grid */
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem; /* Espacio de 2 rem entre elementos hacia todas las direcciones */
+}
+@media (min-width: 768px) {
+    .grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/* Productos */
+.producto {
+    background-color: var(--primarioOscuro);
+    padding: 1rem;
+}
+
+.producto__imagen {
+    width: 100%;
+    border-radius: 1%;
+}
+
+.producto__info {
+
+}
+
+.producto__nombre {
+    font-size: 4rem;
+}
+
+.producto__precio {
+    font-size: 2.8rem;
+    color: var(--secundario);
+}
+
+.producto__nombre, .producto__precio {
+    font-family: var(--fuentePrincipal);
+    margin: 1rem 0; /* Espacio de 1 rem arriba y abajo */
+    text-align: center;
+    line-height: 1.2;
+}
