--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     --primario: #9c27b0;
     --primarioOscuro: #89119D;
     --secundario: #ffce00;
-    --secundarioOscuro: rgb(233, 287, 2);
+    --secundarioOscuro: #ba990f;
     --blanco: #fff;
     --negro: #000;
 
@@ -14,7 +14,9 @@ html {
     font-size: 62.5%;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
 
@@ -22,7 +24,8 @@ html {
 body {
     background-color: var(--primario);
     font-size: 1.6rem;
-    line-height: 1.5; /* Base de la fuente */
+    line-height: 1.5;
+    /* Base de la fuente */
 }
 
 p {
@@ -36,15 +39,19 @@ a {
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
+    border-radius: 1%;
 }
 
 .contenedor {
     max-width: 120rem;
-    margin: 0 auto; /* Centra contenido */
+    margin: 0 auto;
+    /* Centra contenido */
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     text-align: center;
     color: var(--secundario);
     font-family: var(--fuentePrincipal);
@@ -69,7 +76,8 @@ h3 {
 }
 
 .header__logo {
-    margin: 3rem 0; /* Espacio arriba y abajo, a los lados no */
+    margin: 3rem 0;
+    /* Espacio arriba y abajo, a los lados no */
 }
 
 /* Navegacion */
@@ -78,7 +86,8 @@ h3 {
     padding: 1rem 0;
     display: flex;
     justify-content: center;
-    gap: 2rem; /* Espacio entre elementos */
+    gap: 2rem;
+    /* Espacio entre elementos */
 }
 
 .navegacion__enlace {
@@ -94,7 +103,8 @@ h3 {
 */
 
 
-.navegacion__enlace--activo, .navegacion__enlace:hover {
+.navegacion__enlace--activo,
+.navegacion__enlace:hover {
     color: var(--secundario);
 }
 
@@ -115,8 +125,10 @@ h3 {
 .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 2rem; /* Espacio de 2 rem entre elementos hacia todas las direcciones */
+    gap: 2rem;
+    /* Espacio de 2 rem entre elementos hacia todas las direcciones */
 }
+
 @media (min-width: 768px) {
     .grid {
         grid-template-columns: repeat(3, 1fr);
@@ -129,14 +141,7 @@ h3 {
     padding: 1rem;
 }
 
-.producto__imagen {
-    width: 100%;
-    border-radius: 1%;
-}
-
-.producto__info {
-
-}
+.producto__info {}
 
 .producto__nombre {
     font-size: 4rem;
@@ -147,9 +152,126 @@ h3 {
     color: var(--secundario);
 }
 
-.producto__nombre, .producto__precio {
+.producto__nombre,
+.producto__precio {
     font-family: var(--fuentePrincipal);
-    margin: 1rem 0; /* Espacio de 1 rem arriba y abajo */
+    margin: 1rem 0;
+    /* Espacio de 1 rem arriba y abajo */
     text-align: center;
     line-height: 1.2;
+}
+
+/* Graficos */
+.grafico {
+    min-height: 30rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    grid-column: 1 / 3;
+    /* Posiciona el elemento en las dos columnas */
+}
+
+.grafico--camisas {
+    grid-row: 2 / 3;
+    /* Posiciona el elemento en la segunda fila */
+    background-image: url(../img/grafico1.jpg);
+}
+
+.grafico--node {
+    background-image: url(../img/grafico2.jpg);
+    grid-row: 8 / 9;
+}
+
+@media (min-width: 768px) {
+    .grafico--node {
+        grid-row: 5 / 6;
+        /* Posiciona el elemento en la quinta fila */
+        grid-column: 2 / 4;
+        /* Posiciona el elemento en las tres columnas */
+    }
+}
+
+/* Nosotros */
+.nosotros {
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+}
+
+@media (min-width: 768px) {
+    .nosotros {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+.nosotros__imagen {
+    grid-row: 1 / 2; /* Posiciona el elemento en la primera fila */
+    width: 100%;
+    border-radius: 1%;
+}
+
+@media (min-width: 768px) {
+    .nosotros__imagen {
+        grid-column: 2 / 3;
+    }
+}
+
+/* Bloques */
+.bloques {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem; /* Espacio entre bloques */
+}
+
+@media (min-width: 768px) {
+    .bloques {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+.bloque {
+    text-align: center;
+}
+
+.bloque__titulo {
+    margin: 0;
+}
+
+/* Pagina del producto */
+@media (min-width: 768px){
+    .camisa {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+.formulario {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+.formulario__campo {
+    border: 1rem solid var(--primarioOscuro); /* Agregar color, ancho del borde y estilo en 1 sola línea */
+    background-color: transparent; /* Agregar transparencia para que tome el color de fondo */
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none; /* Eliminar el estilo de campo de texto */
+}
+
+.formulario__submit {
+    background-color: var(--secundario);
+    border: none;
+    font-size: 2rem;
+    font-family: var(--fuentePrincipal);
+    padding: 2rem;
+    transition: background-color .5s ease;
+    grid-column: 1 / 3; 
+}
+
+.formulario__submit:hover {
+    cursor: pointer;
+    background-color: var(--secundarioOscuro);
 }
